crates/aranya-policy-compiler/tests/data/functions/arg_option_struct_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
1 | function baz(x option[struct UndefinedStruct]) bool {
  |                              ^^^^^^^^^^^^^^^ struct `UndefinedStruct` not defined
